// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__s7fbsh0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          >
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_3_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_3_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_3_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_9_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_9_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_9_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__s7fbsh0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          >
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_i_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_i_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_i_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_o_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_o_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_o_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_1f_"
        class="styles__s7fbsh0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          >
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_1i_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_1i_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_true__mhtya34 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__mhtya38"
                  id="_r_1i_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_1o_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_1o_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_true__mhtya34 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__mhtya38"
                  id="_r_1o_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_1f_"
        role="status"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_u_"
        class="styles__s7fbsh0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          >
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_11_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_11_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_11_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_17_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_17_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_17_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_u_"
        role="status"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__s7fbsh0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <legend
                class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Label
              </legend>
              <span
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          >
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_25_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_25_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_25_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__mhtya39 styles_disabled_false__mhtya3a styles_labelPosition_right__mhtya3d"
              for="_r_2b_"
            >
              <div
                class="styles__mxir930 styles_alignItems_baseline_xxsmall__mxir931j styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
              >
                <div
                  class="styles__78oem50 styles_alignItems_center_xxsmall__78oem5d styles_gap_0.5rem_xxsmall__78oem52j"
                  style="--ivy5ld0: auto 1fr; --ivy5ld1: auto 1fr; --ivy5ld2: auto 1fr; --ivy5ld3: auto 1fr; --ivy5ld4: auto 1fr; --ivy5ld5: auto 1fr;"
                >
                  <span
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_2b_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__mhtya30 styles_disabled_false__mhtya31 styles_error_false__mhtya33 styles_size_large__mhtya35"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__mhtya38"
                  id="_r_2b_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
